fixed bug on range query for deleted elements

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -1,7 +1,23 @@
-all: generator 
-	
+# MAKEFILE FOR M1 MAC
+CC = cc
+CFLAGS = -I/opt/homebrew/include   # GSL include path
+LDFLAGS = -L/opt/homebrew/lib      # GSL library path
+LIBS = -lgsl -lgslcblas            # GSL libraries
+
+all: generator
+
 generator:
-	$(CC) generator.c -o generator -lgsl -lgslcblas
+	$(CC) generator.c -o generator $(CFLAGS) $(LDFLAGS) $(LIBS)
 
 clean:
 	rm generator
+
+
+# MAKEFILE FOR x86 MAC
+# all: generator 
+	
+# generator:
+# 	$(CC) generator.c -o generator -lgsl -lgslcblas
+
+# clean:
+# 	rm generator
